# cardsagainstai

./: .gitignore  README.md  git-commit-info.sh  pyproject.toml  scaffold_frontend.sh  scaffold_project.sh  scaffold_project_backend.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ca3fa145ab2e_initial_migration.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: ai_personalities.py  cards.py  games.py  history.py  users.py
backend/app/api/schemas/: ai_personalities.py  cards.py  games.py  history.py  users.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py  redis.py  session.py
backend/app/models/: models.py
backend/app/services/: ai_service.py  anthropic.py  card_manager.py  card_service.py  game.py  game_service.py  redis_manager.py  redis_service.py
backend/tests/services/: test_ai_service.py  test_card_service.py  test_game_service.py  test_redis_service.py
bi/: pyproject.toml
bi/bi/: __init__.py  data.py
db/: categorize.py  pyproject.toml  setup_db.py  setup_db.sql  source.sqlite
db/colombian_cards/: tarjetas-blancas-comida.csv  tarjetas-blancas-famosos.csv  tarjetas-blancas-paisas.csv  tarjetas-blancas-reggaeton.csv  tarjetas-blancas-vallenato.csv  tarjetas-negras-comida.csv  tarjetas-negras-famosos.csv  tarjetas-negras-paisas.csv  tarjetas-negras-reggaeton.csv  tarjetas-negras-vallenato.csv
frontend/: README.md  tailwind.config.js
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: BlackCard.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  FinalResultsModal.tsx  GamePage.tsx  HomePage.tsx  JudgeDecisionModal.tsx  ScoreBoard.tsx  WhiteCard.tsx
frontend/hooks/: useGame.ts
specifications/: backend_specifications.md  frontend_specifications.md  openapi.yaml  openapi_final.yaml
(+14 files in other folders)
