[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.3.4"
sqlmodel = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
