[tool.poetry]
name = "bi"
version = "0.1.0"
description = ""
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
